# PseudoPowerSpectrum

./: CMakeLists.txt  README.md
cmake/: FindHEALPix.cmake
pseudo_power_spectrum/: healpix_io.hpp  pseudo_power_spectrum.hpp
tests/: CMakeLists.txt  healpix_io.cpp
